Added actions to FragImportDesignateVaults.
Also, fixed a bug where action mode would not start if it was exited when all checked items were not displayed on the list

--- a/SimplePassApp/res/menu/frag_import_pick_file_type.xml
+++ b/SimplePassApp/res/menu/frag_import_pick_file_type.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/action_continue"
-        android:icon="@drawable/ic_action_check"
+        android:icon="@drawable/ic_action_next"
         android:showAsAction="always"
         android:title="@string/continue_"
         android:titleCondensed="@string/continue_condensed">
