--- a/SimplePassApp/res/layout/frag_import_edit_account.xml
+++ b/SimplePassApp/res/layout/frag_import_edit_account.xml
@@ -72,11 +72,12 @@
 
     <ImageButton
         android:id="@+id/showUsernameButton"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/verticalSeparator2"
-        android:layout_margin="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/ic_action_view_desc"
         android:src="@drawable/ic_action_view" />
@@ -114,11 +115,12 @@
 
     <ImageButton
         android:id="@+id/showPasswordButton"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/verticalSeparator3"
-        android:layout_margin="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/ic_action_view_desc"
         android:src="@drawable/ic_action_view" />
@@ -151,33 +153,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <EditText
-                android:id="@+id/categoryInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginBottom="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_toLeftOf="@+id/doneButton"
-                android:ems="10"
-                android:inputType="text" />
-
-            <ImageButton
-                android:id="@+id/doneButton"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_alignParentRight="true"
-                android:layout_margin="8dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:contentDescription="@string/ic_action_check_desc"
-                android:src="@drawable/ic_action_check_dark" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
             <Spinner
                 android:id="@+id/categorySpinner"
                 android:layout_width="match_parent"
@@ -192,13 +167,42 @@
 
             <ImageButton
                 android:id="@+id/editButton"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_alignParentRight="true"
-                android:layout_margin="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="4dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:contentDescription="@string/ic_action_edit_desc"
                 android:src="@drawable/ic_action_edit" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/categoryInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_toLeftOf="@+id/doneButton"
+                android:ems="10"
+                android:inputType="text" />
+
+            <ImageButton
+                android:id="@+id/doneButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="4dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/ic_action_check_desc"
+                android:src="@drawable/ic_action_check_dark" />
         </RelativeLayout>
     </ViewSwitcher>
 
