--- a/SimplePassApp/res/layout/frag_import_edit_account.xml
+++ b/SimplePassApp/res/layout/frag_import_edit_account.xml
@@ -34,10 +34,7 @@
         android:layout_marginBottom="4dp"
         android:layout_marginTop="4dp"
         android:ems="10"
-        android:inputType="text" >
-
-        <requestFocus />
-    </EditText>
+        android:inputType="text" />
 
     <TextView
         android:id="@+id/textView2"
